# tomahawk-resolvers

./: .gitignore  HACKING.md  README  README.md  bower.json  html5_api_tester.js  package.json  tomahawk-env.js
3voor12/content/: metadata.json
3voor12/content/contents/code/: 3voor12.js
4shared/: 4shared-resolver.js
4shared/content/: metadata.json
4shared/content/contents/code/: 4shared.js
8tracks/: 8tracks-prefer-popular.js  8tracks.js
8tracks/content/: metadata.json
8tracks/content/contents/code/: 8tracks.js
admin/: json2desktop.rb  makeaxe.rb
admin/any/: json2desktop.rb
admin/linux/: create_synchrotron.rb
admin/mac/: create_synchrotron.rb
admin/spotify-synchrotron/linux/: create_synchrotron.rb
admin/spotify-synchrotron/mac/: create_synchrotron.rb
admin/spotify-synchrotron/win/: create_synchrotron.rb
admin/win/: create_synchrotron.rb
amazon/content/: metadata.json
amazon/content/contents/code/: amazon.js  config.ui
ampache/: ampache-resolver.js  config.ui
ampache/content/: metadata.json
aolmusic/: aolmusic-resolver.js
archive/: README
archive/spotify/: consolewatcher.h  logger.cpp  logger.h  spotify.desktop  spotifyiodevice.cpp  spotifyiodevice.h  spotifyloghandler.cpp  spotifyloghandler.h  spotifyplaylists.h  spotifysession.cpp
archive/spotify/cmake/: Findlibspotify.cmake
archive/spotify/kdsingleapplicationguard/: kdsingleapplicationguard.cpp
authproxy/: app.yaml  authproxy.go
bandcamp/: README.md
bandcamp/content/: metadata.json
bandcampmobile/content/: metadata.json
beatsmusic/authproxy/: app.yaml  authproxy.go
beatsmusic/content/: metadata.json
beatsmusic/helpers/: resolve.js
beets/: beets.js
beets/content/: metadata.json
deezer-metadata/content/: metadata.json
deezer/content/: metadata.json
dilandau/: dilandau.js
dilandau/content/: metadata.json
docs/: mkdocs.yml
docs/docs/: basic.md  index.md  searchresolve.md  urllookup.md
dropbox/: config.ui  dropbox.js  jsOAuth-1.3.6.min.js  musicManager.js
dropbox/content/: metadata.json
ex.fm/content/: metadata.json
examples/javascript/: javascript-resolver.js
examples/javascript/content/: metadata.json
examples/php/: php-resolver.php
examples/streamtest/content/: metadata.json
exfm/: exfm.js
exfm/content/: exfm.axe  metadata.json
gmusic/content/: metadata.json
googledrive/: config.ui  googledrive.js  musicManager.js
googledrive/content/: metadata.json
grooveshark/: CMakeLists.txt  config.ui  grooveshark.js  groovesharkresolver.cpp  groovesharkresolver.h  main.cpp
grooveshark/content/: metadata.json
grooveshark/content/contents/code/: grooveshark.js
hlstest/content/: metadata.json
hypem/: hypem.js
imports/: rsvp.js
imports/tomahawk/: collection.js  countries.js  plugin-manager.js  request.js  resolver-capabilities.js  resolver.js  url-types.js
imports/tomahawk/utils/: config-test-results.js  html-decode.js  remove-diacritics.js  timestamp.js  version-compare.js
jamendo/: jamendo-resolver.js
jamendo/content/: metadata.json
jazz-on-line/: jazz-on-line-resolver.py  jol_resolver.py  jol_search.py  jolify.py  listing.txt
kibergrad/content/: metadata.json
lastfm/: lastfm-resolver.js  lastfm.js
lastfm/content/: metadata.json
muzebra/: muzebra.js
myzuka/content/: metadata.json
netease/content/: metadata.json
official.fm/: officialfm-resolver.js  officialfm.js
official.fm/content/: metadata.json
officialfm/content/: metadata.json
omnify-metadata/content/: metadata.json
prostopleer/content/: metadata.json
qobuz/: qobuz.js
qobuz/content/: metadata.json
rdio-metadata/content/: metadata.json
rhapsody/content/: metadata.json
skreemr/: skreemr-resolver.js
soundcloud/: soundcloud-resolver.js  soundcloud-resolver.py  soundcloud.js  soundcloud.py
soundcloud/content/: metadata.json
spotify/: BreakPad.cpp  CMakeLists.txt  PlaylistClosure.cpp  PlaylistClosure.h  appkey.h  audiohttpserver.cpp  audiohttpserver.h  audiohttpworker.cpp  build_static.sh  callbacks.h  config.ui  consolewatcher.cpp  main.cpp  main.h  pack.sh  resources.qrc  spotify.desktop  spotify_key.h  spotifyhttpserver.cpp  spotifyhttpserver.h  spotifyiodevice.cpp  spotifyiodevice.h  spotifyloghandler.cpp  spotifyloghandler.h  spotifyplayback.cpp  spotifyplayback.h  spotifyplaylists.cpp  spotifyplaylists.h  spotifyresolver.cpp  spotifyresolver.h  spotifysearch.cpp  spotifysearch.h  spotifysession.cpp  spotifysession.h  static_notes.txt
spotify-metadata/content/: metadata.json
spotify/cmake/: FindQJSON.cmake  Findlibspotify.cmake
spotify/content/: metadata.json
spotify/content/contents/code/: config.ui  spotify.js
spotify/kdsingleapplicationguard/: kdsingleapplicationguard.cpp  kdsingleapplicationguard.h  kdtoolsglobal.h
spotify/native/: CMakeLists.txt  main.cpp
spotify/qxtweb-standalone/qxtweb/: qxtabstracthttpconnector.cpp  qxtglobal.h  qxtmetaobject.cpp
subsonic/: config.ui  subsonic.js
subsonic/content/: metadata.desktop  metadata.json
synology-audiostation/content/: metadata.json
test/: buster.js  utils.js
tidal/content/: metadata.json
tomahawk/: resolver.js
tomahawkspotify/: CMakeLists.txt  audiohttpserver.cpp  audiohttpserver.h  audiohttpworker.cpp  audiohttpworker.h  callbacks.h  config.ui  consolewatcher.cpp  resources.qrc  spotify_key.h  spotifyiodevice.cpp  spotifyiodevice.h  spotifyresolver.cpp  spotifyresolver.h  tomahawkspotify.kdev4
tomahawkspotify/qxtweb-standalone/qxtweb/: qxtabstracthttpconnector.cpp  qxthttpsessionmanager.cpp
tomahk-metadata/content/: metadata.json
tools/: getstreamurl.js  resolve.js  search.js  urllookp.js  urllookup.js
vibe3/content/: metadata.json
vkontakte/: vkontakte-resolver.js
vkontakte/content/: metadata.json
youtube/: config.ui  t.txt  youtube-mp3-resolver.js  youtube-resolver.js  youtube-resolver.php  youtube.js
youtube-metadata/content/: metadata.json
youtube-urllookup/content/: metadata.json
youtube/content/: metadata.json
youtube/youtube/: config.ui  youtube.js
zaycevnet/content/: metadata.json
zv.fm/content/: metadata.json
(+74 files in other folders)
